# sffs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  commit-lint.yml  release-please.yml  release.yml
benches/: cli_benchmarks.rs
docs/: USER_GUIDE.md  WHY_ITS_FAST.md
docs/benchmarks/: reference.json
memories/repo/: benchmarking.md
src/: benchmark.rs  cli.rs  lib.rs  main.rs  perf.rs  render.rs  scan.rs  walker.rs
tests/: cli.rs
