[package]
name = "sffs"
version = "0.1.4"
edition = "2021"
authors = ["Benn <benjamin-kraatz@users.noreply.github.com>"]
description = "Super Fast File Size (sffs) - a blazingly fast, parallel disk usage analyzer with a beautiful UI"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "du", "fast", "file-size", "rust"]
repository = "https://github.com/benjamin-kraatz/sffs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
mimalloc = "0.1"
owo-colors = "4.0"

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
predicates = "3.1"
tempfile = "3.10"

[[bench]]
name = "cli_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
